fix: ensure artifacts are overwritten during upload in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           name: ${{ runner.os }}-artifacts
           path: dist/*
+          overwrite: true
 
   release:
     needs: build
