fix: ensure the latest release is marked as the latest in GitHub Release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: dist/**/*
+          make_latest: true
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
